Conversion to Java 6